[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/interactive/interactive/motor3.png" type="Texture" id=1]
[ext_resource path="res://assets/art/interactive/interactive/locked.png" type="Texture" id=2]
[ext_resource path="res://scenes/interact/PadlockedMotor.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 112.5, 50 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 102.5, 30 )

[node name="LockedMotor" type="Node2D"]
position = Vector2( 177, 50 )
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Motor" type="Sprite" parent="Area2D"]
position = Vector2( 25, 235 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Locked2" type="Sprite" parent="Area2D"]
position = Vector2( 63, 260 )
texture = ExtResource( 2 )

[node name="Locked" type="Sprite" parent="Area2D"]
position = Vector2( 25, 260 )
texture = ExtResource( 2 )

[node name="Locked3" type="Sprite" parent="Area2D"]
position = Vector2( -12, 260 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 25.5, 240 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2( 25.5, 235 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
